--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<header>
 			<nav>
-			<h1 class="titulo-principal">PIZZARIA COLATUSSOS</h1>
+			<h1 class="titulo-principal">PIZZARIA COLATUSSOS ok</h1>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="produtos.html">Produtos</a></li>
